Fixed UI overflows

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@
 
 @layer components {
     #app {
-        @apply max-sm:py-8 max-sm:px-6 max-sm:space-y-12 sm:max-md:py-6 sm:max-md:px-32 sm:max-md:space-y-8 md:py-6 md:px-40 md:space-y-10;
+        @apply max-sm:py-8 max-sm:px-6 max-sm:space-y-12 sm:max-md:py-8 sm:max-md:px-12 sm:max-md:space-y-8 md:py-6 md:px-32 md:space-y-10;
         @apply dark:bg-slate-900 dark:text-slate-100;
         @apply min-h-screen transition-all duration-300;
     }
