--- a/frontend/src/pages/Dashboard/index.css
+++ b/frontend/src/pages/Dashboard/index.css
@@ -4,11 +4,11 @@
 
 @layer components {
     .dashboard-container {
-        @apply flex flex-col;
+        @apply flex flex-col items-center max-w-full;
     }
 
     .dashboard-container > .header {
-        @apply flex flex-row items-center justify-evenly;
+        @apply flex flex-row items-center justify-between space-x-8;
     }
 
     .dashboard-title {
